--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "axios": "^1.13.3",
+    "date-fns": "^4.1.0",
     "framer-motion": "^12.29.2",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.563.0",
     "next": "16.1.5",
+    "pdf-lib": "^1.17.1",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-hot-toast": "^2.6.0",
